10-05-13
 - IDMUS cheat now works in netgames.
 - noprecache and faststart are now in EXTEND.CFG.

10-04-13
 - "-gus" paramater now loads the HT_GUS1M.WAD internally from the EXE.
   You no longer need the HT_GUS1M.WAD present to load it.
 - useIntGus in EXTEND.CFG to always autoload the updated HT_GUS1M.WAD.
 - Moved all the new config stuff to EXTEND.CFG.  Was starting to get
   out of hand. :P
 - novert is now in EXTEND.CFG as well.  Setting "-novert" will also
   toggle novert in EXTEND.CFG.

10-02-13
 - Draw Time clock on Automap with drawTime in config file.
   * Set to 1 for Military Time.
   * Set to 2 for Standard Time.

09-28-13
 - use_artbinds in HERETIC.CFG.  If set to 1, the following defaults are used:
   * 'F' for Torch
   * 'G' for Quartz Flask
   These binds can be customized via the HERETIC.CFG.  However, you must know
   the appropriate scancode.
 - art_torch will toggle a torch.
 - Fixed "-skill 0" to be an invalid option as well as any other invalid
   number passed to "-skill".
 - Specify the main game WAD with -mainwad.  Useful for DEUSF stuff and you
   don't want to remember if you un-DEUSF'd something.

09-25-13
 - Preliminary HHE support.  No text parsing.  Need to find a solution.

09-23-13
 - Weapon pick up text in Netgames.
 - No friendly fire returns.  This time it works properly!

09-21-13
 - Load a custom Gravis UltraSound INI file with -usegusini <filename.ini>.
   Error checks are in place to see if the file exists and if you passed
   something after -usegusini.
 - F10 will now quit at the title screen, just like Doom.

09-19-13
 - -oldsave parameter to load older save games (i.e. not the 1MB and
    256 string size games).
 - Warning to use -oldsave.
 - -convertsave <slot #> parameter.  Convert your old saves to the new ones!
   I don't think it will corrupt it, but do a backup first just in case.
 - Z_Free(&savebuffer) when you error out of incorrect versions.

09-15-13