@@ -670,26 +670,26 @@ int	screenblocks;
 
 void R_Init (void)
 {
-	tprintf("R_InitData\n",1);
 	R_InitData ();
-//printf (".");
-	tprintf("R_InitPointToAngle\n",0);
+	tprintf (".", 1);
+
 	R_InitPointToAngle ();
-//printf (".");
-	tprintf("R_InitTables\n",0);
+	tprintf (".", 1);
+
 	R_InitTables ();
 	// viewwidth / viewheight / detailLevel are set by the defaults
-//printf (".");
+	tprintf (".", 1);
+
 	R_SetViewSize (screenblocks, detailLevel);
-	tprintf("R_InitPlanes\n",0);
 	R_InitPlanes ();
-//printf (".");
-	tprintf("R_InitLightTables\n",0);
+	tprintf (".", 1);
+
 	R_InitLightTables ();
-//printf (".");
-	tprintf("R_InitSkyMap\n",0);
+	tprintf (".", 1);
+
 	R_InitSkyMap ();
-//printf (".");
+	tprintf (".", 1);
+
 	R_InitTranslationTables();
 	framecount = 0;
 }
